--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -35,8 +35,8 @@
 
                   <td class="text-center">
                   
-                  <a href="/books/edit/<%= books[count]._id %>"
-                      class="btn btn-primary"><i class="fas fa-pencil-alt"></i> Edit
+                  <a href="/books/<%= books[count]._id %>"
+                      class="btn btn-primary"><i class="far fa-edit"></i> Edit
                   </a>
                   
                   </td>
