delete functionality added

--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
   <div class="container">
-    <h4  class="navbar-text">&copy; 2017 All Rights Reserved.</h4>
+    <h4  class="navbar-text">&copy; 2019 All Rights Reserved.</h4> <h1 class="navbar-text">-------Maninderpal Singh-----300942719------</h1>
   </div>
 </nav>
 
