--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,3 +1,8 @@
+<!-- Filename: error.js
+Author: Maninderpal Singh
+StudentID: 300942719  
+WebAppName: COMP308-W2019-Midterm-300942719 -->
+
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
