--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,3 +1,8 @@
+<!-- Filename: footer.js
+Author: Maninderpal Singh
+StudentID: 300942719  
+WebAppName: COMP308-W2019-Midterm-300942719 -->
+
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
   <div class="container">
