--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -1,3 +1,8 @@
+<!-- Filename: details.js
+Author: Maninderpal Singh
+StudentID: 300942719  
+WebAppName: COMP308-W2019-Midterm-300942719 -->
+
 <% include ../partials/header.ejs %>
 
     <!-- MAIN CONTENT -->
