--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,3 +1,8 @@
+<!-- Filename: header.js
+Author: Maninderpal Singh
+StudentID: 300942719  
+WebAppName: COMP308-W2019-Midterm-300942719 -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
